--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,16 @@ services:
   telegraf:
     image: telegraf:1.4.0
     volumes:
-      - ./etc/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - //var/run/docker.sock:/var/run/docker.sock
     links:
       - influxdb
     ports:
       - "8092:8092/udp"
       - "8094:8094"
       - "8125:8125/udp"
+    networks:
+      - qp
   # Define an InfluxDB service
   influxdb:
     image: influxdb:1.3.5
@@ -26,6 +29,8 @@ services:
       - ./data/influxdb:/var/lib/influxdb
     ports:
       - "8086:8086"
+    networks:
+      - qp
   # Define a Chronograf service
   chronograf:
     image: chronograf:1.3.8
@@ -37,6 +42,8 @@ services:
     links:
       - influxdb
       - kapacitor
+    networks:
+      - qp
   # Define a Kapacitor service
   kapacitor:
     image: kapacitor:1.3.3
@@ -47,6 +54,8 @@ services:
       - influxdb
     ports:
       - "9092:9092"
+    networks:
+      - qp
   # Define a service for using the influx CLI tool.
   # docker-compose run influxdb-cli
   influxdb-cli:
@@ -57,6 +66,8 @@ services:
       - influxdb
     links:
       - influxdb
+    networks:
+      - qp
   # Define a service for using the kapacitor CLI tool.
   # docker-compose run kapacitor-cli
   kapacitor-cli:
@@ -66,5 +77,7 @@ services:
       KAPACITOR_URL: http://kapacitor:9092
     links:
       - kapacitor
+    networks:
+      - qp
 networks:
   qp:
